--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -4,6 +4,24 @@
   <title></title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>Cats and Dogs</h1>
+
+<p>The debate between whether cats or dogs are the superior pets is as old as time. I think it's important to keep in mind that they are both <strong>fluffy </strong> and <strong>adorable</strong> animals. So even if you prefer one over the other, remember it is your duty to pet them all, <em>as long as you are not allergic.</em>
+</p> 
+
+<ul>Dog Names
+<li>Spot</li>
+<li>Fido </li>
+<li>Champ</li>
+</ul>
+
+<ol>Cat Names
+<li>Sparkles</li>
+<li>Snowball</li>
+<li>Sylvester</li>
+</ol>
+
+<a href="http://www.cutestpaw.com/">Cute Animal Pictures!</a>
+
 </body>
 </html>
