--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -41,7 +41,7 @@
     <tr>
       <td rowspan="2">Dog</td>
       <td>Jasmine</td>
-      <td>&nbsp;</td>
+      <dt>&nbsp;</td>
     </tr>
     <tr>
       <td>Purple</td>
