Add reflection answers

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -49,3 +49,13 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad .</section>
 </table>
 </body>
 </html>
+
+<!--
+Semantic tags are used to define the content of the element. It helps the developer better understand what is going on inside the element and it's also used to make content more accessible to people with disabilities.
+
+The order the webpage loads is outlined by the Document Object Model.
+
+In this challenge we learned how to create snippets and I also learned a couple of handy ones I didn't know already. The more I learn about programming the more I'm sure I'll be using snippets. I can see how it would be useful for my personal info so I wouldn't have to type it out over and over again.
+
+The most difficult part is fully understanding what goes on inside a snippet. Our guide did a good job of giving an overall explanation but to understand it fully I know I'll have to do more research on my own time.
+-->
