--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -3,9 +3,9 @@
 <head>
   <link rel="stylesheet" href="octopus.css" type="text/css">
 
-  <img src="glasses.png" alt="glasses">
-  <img src="hat.png" alt="hat">
-  <img src="octopus.png" alt="octopus">
+  <img id ="glasses" src="glasses.png" alt="glasses">
+  <img id="hat" src="hat.png" alt="hat">
+  <img id="octopus" src="octopus.png" alt="octopus">
 
   <title></title>
 </head>
